<resources>
    <string name="app_name">PrivateSale</string>
    
    //SharedPreferences KEYS
    <string name="event_preference_key">EVENT_PREFERENCE</string>

    //menu
    <string name="action_info">Info</string>
    <string name="action_list">List</string>
    <string name="action_flash">Flash</string>
    <string name="action_search">Search</string>

    //title
    <string name="event_title">Events</string>
    <string name="about_title">A propos</string>

    //About
    <string name="about_contact">support@test.com</string>
<!--    <string name="about_version">%s V%1$s</string>-->
    <string name="about_version">PrivateSale V%s</string>
    <string name="about_event">Selected Event :</string>
    <string name="about_event_btn_default">Choose Event...</string>
    <string name="about_event_btn">%s - %s &#9660;</string>


    <string name="unauthorized">Non Inscrit</string>
    <string name="authorized">Inscrit</string>

    //Customer Card
    <string name="card_lastname">Nom</string>
    <string name="card_firstname">Prénom</string>
    <string name="card_email">Email</string>
    <string name="card_event">Event</string>

    //dialog
    <string name="error_dialog_title">Erreur</string>
    <string name="no_event_select_dialog">Aucun évênement est sélectionné.\n Aller dans à propos pour le sélectionner.</string>



    <string name="filer">...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
